--- a/app/src/main/res/layout/item_day_weather.xml
+++ b/app/src/main/res/layout/item_day_weather.xml
@@ -67,11 +67,36 @@
         android:textColor="@android:color/black"
         android:textSize="@dimen/text_size_medium"/>
 
-    <TextView
-        android:id="@+id/humidity"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/text_size_medium"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/humidity"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/text_size_medium"/>
+
+        <TextView
+            android:id="@+id/share"
+            android:layout_width="@dimen/textview_width"
+            android:layout_height="wrap_content"
+            android:background="@drawable/share_background"
+            android:gravity="center"
+            android:padding="@dimen/text_padding"
+            android:text="@string/share"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/text_size_medium"/>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="@dimen/view_margin"
+        android:background="@color/edit_color"/>
 
 </LinearLayout>
