--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="edit_color">#bebebe</color>
     <color name="toolbar">#1d3037</color>
     <color name="edit_background">#fafafa</color>
+    <color name="textview_back_pressed">#ff2b2b</color>
+    <color name="textview_back">#ff7979</color>
+    <color name="main_background">#50000000</color>
+    <color name="background">#889aff</color>
 </resources>
