--- a/app/src/main/res/layout/dialog_all_cities.xml
+++ b/app/src/main/res/layout/dialog_all_cities.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:gravity="center"
               android:orientation="vertical">
 
     <EditText
@@ -24,8 +25,16 @@
         android:id="@+id/cities_recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:visibility="gone">
     </android.support.v7.widget.RecyclerView>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateDrawable="@drawable/spinner_gray_circle"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/cancel"
